------------- Version 0.1.8b

- Fix Bug found by Markus Götz that made the program crash, when all 
  piece were cubes

- Fix a bug found by Primitivo Familiar Ramos. The problem- slider on 
  the solve tab didn't work

- also implement some suggestions by Primitivo: start counting from 1,
  unify tool tips, fix some spelling errors

- empty status bar when activating solve tab, as the information got 
  stale (found by Peter Knoppers)

------------- Version 0.1.8a Nov 13 2005

- when the program crashes it tries to show some information and it also
  tries to save the current puzzle into __rescue.xmpuzzle. Please follow 
  the instructions in this window and send me the information.

- when reducing show the piece that is worked on to show that something
  is going on

- Placement browser lets you see at what positions a certain piece fits
  into the resulting shape. Attention, read the documentation about this

- Documentation updates. Some of the internals are described. I was also
  able to bundle some puzzle designs with the program so that you
  have something to play with right after installing the program.
  Many thanks to the designers for allowing me to include their designs.

- Suppression of rotated and mirrored solutions. The program now
  wont find rotated and mirrored solutions any longer (at leat I hope
  that it does

- configuration file. The position of the window is saved, you can also
  toggle tooltips and switch off the light in 3D view resulting in a
  completely even and very light colors for the pieces

- better groupings. It is not possible to assign mutliple groups with a
  count to each (set of) pieces. The meaning is defined like this. There
  can be UP TO the specified number of pieces in this group. This is not
  required, but when needed it is used. This may be useful if you don't
  know which pieces belong to which group. Say you have a puzzle of n
  identical pieces and all you know is that it can be disassembled into 2